      a convenient wrapper around IPC::Run.
  
  * lib/Lab.pm:
    + [FL] Convert to use Lintian::Output.
  * lib/Tags.pm:
    + [FL] Convert to use Lintian::Output.
  * lib/Pipeline.pm:
    + [FL] Remove, replaced by Lintian::Command.
  * lib/Spelling.pm:
    + [RA] Add subversion to Subversion correction for package descriptions.
      Thanks, Sandro Tosi.  (Closes: #506793)
  * lib/Util.pm:
    + [FL] Convert to use Lintian::Output.
    + [FL] Add some new utility functions: delete_dir copy_dir gunzip_file
      touch_file.

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 28 Sep 2008 10:35:47 +0200

lintian (2.0.0) unstable; urgency=low

  The "and this is only the beginning" release.

  * checks/fields:
    + [RA] Allow tildes in the optional version number in the Source
      field.  Thanks, Rene Engelhard.  (Closes: #500063)

  * checks/scripts:
    + [ADB] Detect brace expansions with either a leading or trailing
      blank component (e.g. "{foo,}"). Thanks to Jonny Lamb for pointing
      this out.
  
  * frontend/lintian:
    + [FL] Fix config file parsing which I completly broke in ~rc1.
  
  * lib/Lintian/Schedule.pm:
    + [FL] Fix parsing of source package entries in package lists.

  * man/lintian.1:
    + [FL] Remove a stray backslash.
  
  * reporting/harness:
    + [FL] Include STDERR output in lintian.log.

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 28 Sep 2008 01:08:41 +0200

lintian (2.0.0~rc2) experimental; urgency=low

  * Summary of tag changes:
    + Added:
      - package-superseded-by-perl
  
  * checks/copyright-file:
    + [FL] Also detect v1.1 of CeCILL license, not only v2.0.
      (Closes: #498994)
  * checks/debhelper:
    + [FL] Use new Lintian::Collect::Source->binaries method.
  * checks/fields{,.desc}:
    + [FL] Warn about Perl module packages superseded by Perl
      core.  Patch by Niko Tyni.  (Closes: #498897)
  * checks/rules:
    + [FL] Do not issue desktop-file-but-no-dh_desktop-call if the